--- a/design.html
+++ b/design.html
@@ -1,146 +1,168 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Federant&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Flower Design</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Federant&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
-    rel="stylesheet">
-  <title>Flower Design</title>
-</head>
-
-<body>
-  <div class="everyWrapper">
-    <div class="headerWrap">
-      <header>
-        <ul>
-          <li class="empty-box">
-            <img src="" alt="" />
-          </li>
-          <li>
-            <a href="/index.html">
-              <h3>HOME</h3>
-            </a>
-          </li>
-          <!-- <li>
+  <body>
+    <div class="everyWrapper">
+      <div class="headerWrap">
+        <header>
+          <ul>
+            <li class="empty-box">
+              <img src="" alt="" />
+            </li>
+            <li>
+              <a href="/index.html">
+                <h3>HOME</h3>
+              </a>
+            </li>
+            <!-- <li>
                       <a href="/about.html">
                           <h3>ABOUT</h3>
                       </a>
                   </li> -->
-          <li>
-            <a href="/design.html">
-              <h3>DESIGN</h3>
-            </a>
-          </li>
-          <li>
-            <a href="/catalogue.html">
-              <h3>CATALOGUE</h3>
-            </a>
-          </li>
-          <li>
-            <a href="/gallery.html">
-              <h3>GALLERY</h3>
-            </a>
-          </li>
-          <li class="empty-box">
-            <img src="" alt="" />
-          </li>
-        </ul>
-      </header>
-    </div>
+            <li>
+              <a href="/design.html">
+                <h3>DESIGN</h3>
+              </a>
+            </li>
+            <li>
+              <a href="/catalogue.html">
+                <h3>CATALOGUE</h3>
+              </a>
+            </li>
+            <li>
+              <a href="/gallery.html">
+                <h3>GALLERY</h3>
+              </a>
+            </li>
+            <li class="empty-box">
+              <img src="" alt="" />
+            </li>
+          </ul>
+        </header>
+      </div>
 
-    <div class="contentWrap">
-      <div class="design">
-        <div class="designBigBox">
-          <div class="designChoiceBox">
-            <div class="designComposition">
-              <div class="designCompositionText">
-                <h3>Choose composition:</h3>
+      <div class="contentWrap">
+        <div class="design">
+          <div class="designBigBox">
+            <div class="designChoiceBox">
+              <div class="designComposition">
+                <div class="designCompositionText">
+                  <h3>Choose composition:</h3>
+                </div>
+                <div class="designCompositionOptions">
+                  <div class="composition">
+                    <h3>2 Uniform Tiling A</h3>
+                  </div>
+                  <div class="composition">
+                    <h3>2 Uniform Tiling B</h3>
+                  </div>
+                  <div class="composition">
+                    <h3>2 Uniform Tiling F</h3>
+                  </div>
+                  <div class="composition">
+                    <h3>4 Uniform Tiling A</h3>
+                  </div>
+                </div>
               </div>
-              <div class="designCompositionOptions">
-                <div class="composition">
-                  <h3>2 Uniform Tiling A</h3>
+              <div class="designFlower">
+                <div class="designFlowerText">
+                  <h3>Choose flower:</h3>
                 </div>
-                <div class="composition">
-                  <h3>2 Uniform Tiling B</h3>
+                <div class="designFlowerOptions">
+                  <div class="flower">
+                    <h3>Hatayi</h3>
+                  </div>
+                  <div class="flower">
+                    <h3>Penç</h3>
+                  </div>
+                  <div class="flower">
+                    <h3>Gonca</h3>
+                  </div>
+                  <div class="flower">
+                    <h3>Lale</h3>
+                  </div>
                 </div>
-                <div class="composition">
-                  <h3>2 Uniform Tiling F</h3>
-                </div>
-                <div class="composition">
-                  <h3>4 Uniform Tiling A</h3>
-                </div>
+              </div>
+              <div class="designViewport">
+                <h3>viewport</h3>
               </div>
             </div>
-            <div class="designFlower">
-              <div class="designFlowerText">
-                <h3>Choose flower:</h3>
-              </div>
-              <div class="designFlowerOptions">
-                <div class="flower">
-                  <h3>Hatayi</h3>
-                </div>
-                <div class="flower">
-                  <h3>Penç</h3>
-                </div>
-                <div class="flower">
-                  <h3>Gonca</h3>
-                </div>
-                <div class="flower">
-                  <h3>Lale</h3>
-                </div>
-              </div>
+            <div class="designBox">
+              <canvas id="sig-canvas"> Get a better browser, bro. </canvas>
             </div>
+          </div>
+          <div class="designAdjust">
+            <div class="designSliderBox">
+              <label for="bgColorPicker" class="designParameterName"
+                >Background Color:</label
+              >
+              <input
+                type="color"
+                id="bgColorPicker"
+                class="designParameterSlider"
+                value="#ffffff"
+              />
+            </div>
+
+            <div class="designSliderBox">
+              <label for="strokeType" class="designParameterName"
+                >Stroke Type:</label
+              >
+              <select id="strokeType" class="designParameterSlider">
+                <option value="round">Round Brush</option>
+                <option value="square">Square Brush</option>
+                <option value="ellipse">Elliptical Brush</option>
+                <option value="flat">Flat Brush</option>
+              </select>
+            </div>
+
+            <div class="designSliderBox">
+              <label for="strokeColorPicker" class="designParameterName"
+                >Stroke Color:</label
+              >
+              <input
+                type="color"
+                id="strokeColorPicker"
+                class="designParameterSlider"
+                value="#222222"
+              />
+            </div>
+
+            <div class="designSliderBox">
+              <label for="strokeWidth" class="designParameterName"
+                >Stroke Width:</label
+              >
+              <input
+                type="range"
+                id="strokeWidth"
+                class="designParameterSlider"
+                value="4"
+                min="1"
+                max="50"
+              />
+            </div>
+
             <div class="designViewport">
-              <h3>viewport</h3>
+              <button id="backCanvasButton">Back</button>
+              <button id="clearCanvasButton">Clear</button>
+              <button id="saveCanvasButton">Save</button>
             </div>
-          </div>
-          <div class="designBox">
-            <canvas id="sig-canvas">
-              Get a better browser, bro.
-            </canvas>
-          </div>
-        </div>
-        <div class="designAdjust">
-          <div class="designSliderBox">
-            <label for="bgColorPicker" class="designParameterName">Background Color:</label>
-            <input type="color" id="bgColorPicker" class="designParameterSlider" value="#ffffff" />
-          </div>
-
-          <div class="designSliderBox">
-            <label for="strokeType" class="designParameterName">Stroke Type:</label>
-            <select id="strokeType" class="designParameterSlider">
-              <option value="round">Round Brush</option>
-              <option value="square">Square Brush</option>
-              <option value="ellipse">Elliptical Brush</option>
-              <option value="flat">Flat Brush</option>
-            </select>
-          </div>
-
-          <div class="designSliderBox">
-            <label for="strokeColorPicker" class="designParameterName">Stroke Color:</label>
-            <input type="color" id="strokeColorPicker" class="designParameterSlider" value="#222222" />
-          </div>
-
-          <div class="designSliderBox">
-            <label for="strokeWidth" class="designParameterName">Stroke Width:</label>
-            <input type="range" id="strokeWidth" class="designParameterSlider" value="4" min="1" max="50" />
-          </div>
-
-          <div class="designViewport">
-            <button id="backCanvasButton">Back</button>
-            <button id="clearCanvasButton">Clear</button>
-            <button id="saveCanvasButton">Save</button>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <script type="module" src="/main.js"></script>
-</body>
-
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
